<resources>

    <!-- TODO: App Values -->

    <string name="app_name">Auth</string>
    <string name="facebook_app_id">871266639931318</string>
    <string name="fb_login_protocol_scheme">fb871266639931318</string>


    <!-- TODO: Login Activity -->
    <string name="forg_pass">Forgot your password?</string>
    <string name="register">Not A Member? <u>JOIN NOW</u></string>
    <string name="login">Log in</string>
    <string name="password">Password</string>
    <string name="email">Email Address</string>
    <string name="pass_char_less">Password must be 8 characters at least</string>
    <string name="invalid_mail">Invalid E-Mail format</string>
    <string name="login_data_problem">Invalid Email/Password</string>
    <string name="log_in_failed">Failed to log in</string>
    <string name="autofill_email">Set your E-mail Address</string>
    <string name="autofill_password">Set your Pssword</string>
    <string name="or_string">OR</string>
    <string name="buyer">Buyer</string>
    <string name="seller">Seller</string>

    <!-- TODO: Registration Activity -->
    <string name="join">Join Storee!</string>
    <string name="already_member">Already a Member? <u>Sign in.</u></string>
    <string name="register_password">Create Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="register_button">Register</string>
    <string name="register_failed">This Email already exists</string>
    <string name="register_data_problem">One or more fields are incorrect</string>
    <string name="invalid_format">Invalid E-Mail format</string>
    <string name="invalid_username">Invalid Username</string>
    <string name="pass_mismatch">Password in both fields NOT matched</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="mobile_number_invalid">Invalid Mobile number</string>

    <!-- TODO: Profile Activity -->
    <string name="general">General</string>
    <string name="mobile">Mobile:</string>
    <string name="order">Order</string>
    <string name="profile_email">Email:</string>
    <string name="gender">Gender:</string>
    <string name="shipping_address">Shipping address:</string>
    <string name="other">Other</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="cancel_option">Cancel</string>
    <string name="ok_option">OK</string>
    <string name="dialog_number">Number</string>
    <string name="dialog_number_hint">0111111111</string>
    <string name="my_orders">My Orders</string>
    <string name="disputed_orders">Disputed Orders</string>
    <string name="wishing_list">Wishing List</string>
    <string name="my_points">My Points</string>
    <string name="dummy_mail">mail@domain.com</string>
    <string name="dummy_name">User_name</string>

    <!-- TODO: Privacy Activity -->
    <string name="privacy_policy">Privacy Policy</string>
    <string name="legal_info">Legal Information</string>
    <string name="new_password">New Password:</string>



</resources>
