<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_dialog">

    <LinearLayout
        android:id="@+id/number_layout"
        style="@style/numberDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dialog_number"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/number_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/dialog_number_hint"
            android:inputType="number"
            android:textSize="16sp" />
    </LinearLayout>


    <View
        android:id="@+id/horizontal_line"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/number_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dividingLine_margin_top"
        android:background="@android:color/darker_gray" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/horizontal_line"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/cancel_option" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <View
                android:id="@+id/vertical_line"
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="@android:color/darker_gray" />
        </LinearLayout>

        <Button
            android:id="@+id/ok_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/ok_option" />

    </LinearLayout>
</RelativeLayout>