<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Privacy.PrivacyActivity">

    <LinearLayout
        style="@style/privacyActivityStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/pass_str"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/password"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/privacyActivityStyle_textSize" />

        <TextView
            android:id="@+id/user_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:inputType="textPassword"
            android:textColor="@android:color/background_dark"
            android:textSize="@dimen/privacyActivityStyle_textSize"
            tools:ignore="TextViewEdits" />

        <ImageView
            android:id="@+id/edit_pen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:src="@drawable/edit_ic"
            tools:ignore="ContentDescription" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/privacyActivityStyle_marginStart"
        android:layout_marginEnd="@dimen/privacyActivityStyle_marginEnd"
        android:background="@color/colorFontGrey" />


    <TextView
        android:id="@+id/privacy_policy"
        style="@style/privacyActivityStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/privacy_policy" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/privacyActivityStyle_marginStart"
        android:layout_marginEnd="@dimen/privacyActivityStyle_marginEnd"
        android:background="@color/colorFontGrey" />

    <TextView
        android:id="@+id/legal_info"
        style="@style/privacyActivityStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/legal_info" />

</LinearLayout>