<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_dialog">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp">

        <TextView
            style="@style/passwordDialogText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/privacy_tv_margin_start"
            android:gravity="center_vertical"
            android:text="@string/new_password" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/new_password_layout"
            android:layout_width="@dimen/privacy_dialog_tilo_width"
            android:layout_height="@dimen/editText_height"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/privacy_tilo_margin_end"
            android:gravity="center"
            app:passwordToggleDrawable="@drawable/password_toggle"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorFontGrey">

            <EditText
                android:id="@+id/new_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/editText_height"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/privacy_tilo_margin_end"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/dialog_confirm_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="70dp">

        <TextView
            style="@style/passwordDialogText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/privacy_tv_margin_start"
            android:gravity="center_vertical"
            android:text="@string/confirm_password" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/confirm_password_layout"
            android:layout_width="@dimen/privacy_dialog_tilo_width"
            android:layout_height="@dimen/editText_height"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/privacy_tilo_margin_end"
            android:gravity="center"
            app:passwordToggleDrawable="@drawable/password_toggle"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorFontGrey">

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/editText_height"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/privacy_tilo_margin_end"
                android:layout_marginBottom="@dimen/privacy_tilo_margin_bottom"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPassword" />


        </android.support.design.widget.TextInputLayout>


    </RelativeLayout>


    <View
        android:id="@+id/horizontal_line"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/dialog_confirm_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dividingLine_margin_top"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/horizontal_line"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/cancel_option" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <View
                android:id="@+id/vertical_line"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray" />
        </LinearLayout>

        <Button
            android:id="@+id/ok_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/ok_option" />


    </LinearLayout>

</RelativeLayout>